[build-system]
requires = [ "setuptools>=40.6.0", "wheel>=0.34.2",]
build-backend = "setuptools.build_meta"

[project]
name = "domdf_sphinx_theme"
version = "0.4.0"
description = "Customised 'sphinx_rtd_theme' used by my Python projects."
readme = "README.rst"
keywords = [ "sphinx", "sphinx-theme", "documentation",]
dynamic = [ "requires-python", "classifiers", "dependencies",]
[[project.authors]]
email = "dominic@davis-foster.co.uk"
name = "Dominic Davis-Foster"

[project.license]
file = "LICENSE"

[project.urls]
Homepage = "https://github.com/domdfcoding/domdf_sphinx_theme"
"Issue Tracker" = "https://github.com/domdfcoding/domdf_sphinx_theme/issues"
"Source Code" = "https://github.com/domdfcoding/domdf_sphinx_theme"
Documentation = "https://domdf_sphinx_theme.readthedocs.io/en/latest"

[tool.importcheck]
