# This file is managed by 'repo_helper'.
# You may add new sections, but any changes made to the following sections will be lost:
#     * metadata
#     * options
#     * options.packages.find
#     * mypy
#     * options.entry_points

[mypy]
python_version = 3.6
namespace_packages = True
check_untyped_defs = True
warn_unused_ignores = True

[options.entry_points]
sphinx.html_themes = domdf_sphinx_theme = domdf_sphinx_theme
